--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appnope==0.1.4
 asttokens==2.4.1
 attrs==23.2.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -9,6 +11,7 @@ decorator==5.1.1
 executing==2.0.1
 fastjsonschema==2.19.1
 fonttools==4.53.0
+idna==3.7
 ipykernel==6.29.4
 ipython==8.25.0
 jedi==0.19.1
@@ -39,6 +42,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==26.0.3
 referencing==0.35.1
+requests==2.32.3
 rpds-py==0.18.1
 six==1.16.0
 stack-data==0.6.3
@@ -47,4 +51,5 @@ tornado==6.4.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.1
 wcwidth==0.2.13
